version bump + downgrade to java 1.8